--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.8",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
