--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.279.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
